--- a/css/style.css
+++ b/css/style.css
@@ -10,18 +10,16 @@
 .content{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .main-container{
     display: flex;
     flex-direction: row;
-    width: auto;
-    margin: 0px auto;
-    float: left;
+    justify-content: space-around;
     height: 400px;
     margin-top: 100px;
-    width: 80%;
-    justify-content: space-between;
+    width: 100%;
+   
 }
 .me_info{
     margin-right: -150px;
