--- a/css/contact.css
+++ b/css/contact.css
@@ -1,25 +1,23 @@
 body{
-    width: 90%;
+    margin: 0;
+  
 }
 .container-contact{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    float: left;
+    flex: 1 1 auto;
     width: 100%;
-    margin-left: 6%;
-    height: 100px;
-    margin-top:1%;
- 
+    margin-top:1vw;
+
 }
 .contact_me{
-    margin-top: 2%;
+    margin-top: 2vw;
 }
 .title_contact_me{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 18px;
+    font-size: 3vw;
     font-weight: 600;
-    margin-top:7%;
-    margin-left:7%;
-    float: left;
+    margin-top:7vw;
+    text-align: center;
 }
