--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ button:focus{
     font-size:1.6vw;
     font-weight: 500;
     margin:0 auto;
-    
+    margin-top: -2.8vw;
     margin-left: 2vw;
     white-space: normal;
     line-height: 2vw;
