--- a/css/style.css
+++ b/css/style.css
@@ -188,4 +188,17 @@ ul li:before{
 .container-portfolio{
     position: relative;
 }
-
+#toTop {
+    position:fixed;
+    z-index:9999;
+    bottom:10px;
+    right:10px;
+    background: url('../img/up.png') no-repeat;
+    width: 64px;
+    height: 64px;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    color: transparent;
+    text-decoration: none;
+   }
