--- a/css/contact.css
+++ b/css/contact.css
@@ -20,9 +20,21 @@ body{
     flex-direction: column;
 }
 .title_contact_me{
+    
+    box-shadow: 0 0 5px 2px rgb(194, 193, 193);
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 3vw;
     font-weight: 600;
     margin-top:7vw;
     text-align: center;
+}
+#contact_img{
+    -moz-transition: all 2s ease-out;
+    -o-transition: all 2s ease-out;
+    -webkit-transition: all 2s ease-out;
+}
+#contact_img img:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
