--- a/css/education.css
+++ b/css/education.css
@@ -1,31 +1,32 @@
 .text_education{
     text-align: center;
-    
+    box-shadow: 0 4px 0px 0px rgb(194, 193, 193);
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 1.8vw;
     font-weight: 700;
     
 }
 .specialization{
-   
+
     float: left;
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
 .date{
     float: left;
-   
+
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
 .container-education{
     display: flex;
     justify-content: space-around;
+  
     flex-direction: column;
     width: 100%;
     margin-top: 40vw;
     height: 0vw;
-    box-shadow: 0 0 5px 2px rgb(243, 240, 240);
+
 }
 
 .text-container-education{
@@ -38,10 +39,9 @@
 }
 .title_education{
     font-family: 'PT Sans Narrow', sans-serif;
-
     font-size: 3vw;
     font-weight: 600;
-    margin-top:-15vw;
+    margin-top:-18vw;
     text-align: center;
     
 }
