--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,30 +7,42 @@ body,html{
     justify-content: space-around;
     flex-direction: row;
     width: 100%;
-    padding: -1vw;
+    padding-bottom: 2vw;
     height: auto;
     margin-top:10vw;
-    box-shadow: 0 0 5px 2px rgb(243, 240, 240);
+    box-shadow: 0 4px 4px 0px rgb(194, 193, 193);
+
 }
 .portfolio_card{
+    
     flex: 1 1 auto;
     font-family: 'PT Sans Narrow', sans-serif;
     text-align: center;
     width: 100%;
+    height: 100%;
     font-size: 1.8vw;
     font-weight: 700;
-    box-shadow: 0 0 0.5vw 0.2vw rgb(248, 245, 245);
+  
 
 }
 
 #a_portfolio:hover{
-    border-radius: 0vw;
     flex: 1 1 auto;
-    box-shadow:0vw 0vw 5vw 2vw rgb(209, 209, 212);
+}
+.portfolio_click{
+    -moz-transition: all 1s ease-out;
+    -o-transition: all 2s ease-out;
+    -webkit-transition: all 2s ease-out;
+}
+.portfolio_click img:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 .title_portfolio{
     font-family: 'PT Sans Narrow', sans-serif;
     font-size: 2.9vw;
+ 
     text-align: center;
     font-weight: 600;
     margin-top:10vw;
