--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ html, body {
     margin-left:5%;
     margin-top: 10vw;
     width: 90%;
+    border:1px solid red;
    
 }
 .header_text_name{
@@ -47,15 +48,15 @@ html, body {
     font-size:1vw;
     margin-top: 7vh;
     margin-left: 20vh;
-    
+    border:1px solid red;
 }
 .logo_header{
     font-size:1vw;
     margin:1vw;
-    
+    border:1px solid red;
 }
 .nav_header{  
-
+    border:1px solid red;
     flex:1 0 auto;
     text-align: right;
     font-size:2vw;
@@ -72,6 +73,7 @@ a{
     color: ghostwhite;
     text-decoration: none;
     margin:0.2vw;
+    
 }
 a:hover{
     font-family: 'PT Sans Narrow', sans-serif;
@@ -103,6 +105,7 @@ button:hover{
     background-color: rgb(233, 231, 231);
     color:rgb(35, 129, 223);
     border-radius:1.2vw;
+    
 }
 button:focus{
     outline: none;
@@ -124,19 +127,18 @@ button:focus{
 }
 .main{
     display: flex;
-    margin:0 auto;
-    height:80vw;
+    flex:1 1 auto;
+    max-height: 0vw;
+    border:1px solid red;
 }
-.me_img{
+.me_img img{
     display: flex;
     flex-direction: column;
-  
-    height:26.8vw;
+    width: 30vw;
 }
 .me_card{
-    
+    width: 30vw;
     box-shadow: 0 0 5px 2px rgb(194, 193, 193);
-    height:60vw;
    
 }
 
@@ -161,26 +163,41 @@ button:focus{
     text-align: center;
 }
 .li_me_title{
-    margin-top: -2vw;
     font-size:1.8vw;
-    flex: 1 1 auto;
+    text-align: left;
+    margin-top:2vw auto;
     font-family: 'PT Sans Narrow', sans-serif;
     font-weight: 700;
+    color: rgb(0, 0, 0);
+    border:1px solid red;
+    content: none; 
+   
+ 
+    
 }
 .li_me_skills{
     font-family: 'PT Sans Narrow', sans-serif;
     font-size:1.7vw;
-  
-    width: 15vw;
-    margin-left: 1vw;
-    flex: 1 1 auto;
+     text-align: left;
     list-style-type: none;
+    border:1px solid red;
+    
 }
 ul li:before{
     color: rgb(35, 129, 223);
     content: "•"; 
-    flex: 1 1 auto;
-    padding-right: 0.7vw; 
+    display: flex;
+    flex-direction:column;
+  
+}
+ul{
+   
+
+
+   border:1px solid red;
+   
+
+    
 }
 
 
@@ -193,10 +210,10 @@ ul li:before{
     bottom:10px;
     right:10px;
     background: url('../img/up.png') no-repeat;
-    width: 64px;
-    height: 64px;
+    width:50px;
+    height: 50px;
     border: none;
-    padding: 5px;
+    padding: 12px;
     cursor: pointer;
     color: transparent;
     text-decoration: none;
