--- a/css/bar.css
+++ b/css/bar.css
@@ -3,99 +3,99 @@
     position: relative;
     width: 100%;
     background-color: #ddd;
-    border-radius: 7px;
-    height: 10px;
+    border-radius: 0.7vw;
+    height: 1vw;
   }
 .bar_0 {
     position: relative;
-    width: 50%;
-    height: 10px;
+    width: 28vw;
+    height: 1vw;
     background-color:rgb(35, 129, 223);
     text-align: center;
-    line-height: 30px;
+    line-height: 3vw;
     color: white;
-    border-radius: 7px;
+    border-radius:0.7vw;
   }
 .bar_1 {
-    position: relative;
-    width: 40%;
-    height: 10px;
-    background-color:rgb(35, 129, 223);
-    text-align: center;
-    line-height: 30px;
-    color: white;
-    border-radius: 7px;
+  position: relative;
+  width: 28vw;
+  height: 1vw;
+  background-color:rgb(35, 129, 223);
+  text-align: center;
+  line-height: 3vw;
+  color: white;
+  border-radius:0.7vw;
   }
 
 .bar_2 {
-    position: relative;
-    width: 60%;
-    height: 10px;
-    background-color:rgb(35, 129, 223);
-    text-align: center;
-    line-height: 30px;
-    color: white;
-    border-radius: 7px;
+  position: relative;
+  width: 28vw;
+  height: 1vw;
+  background-color:rgb(35, 129, 223);
+  text-align: center;
+  line-height: 3vw;
+  color: white;
+  border-radius:0.7vw;
   }
 
 .bar_3 {
-    position: relative;
-    width: 30%;
-    height: 10px;
-    background-color:rgb(35, 129, 223);
-    text-align: center;
-    line-height: 30px;
-    color: white;
-    border-radius: 7px;
+  position: relative;
+  width: 28vw;
+  height: 1vw;
+  background-color:rgb(35, 129, 223);
+  text-align: center;
+  line-height: 3vw;
+  color: white;
+  border-radius:0.7vw;
   }
 
 .bar_4 {
-    position: relative;
-    width: 40%;
-    height: 10px;
-    background-color:rgb(35, 129, 223);
-    text-align: center;
-    line-height: 30px;
-    color: white;
-    border-radius: 7px;
+  position: relative;
+  width: 28vw;
+  height: 1vw;
+  background-color:rgb(35, 129, 223);
+  text-align: center;
+  line-height: 3vw;
+  color: white;
+  border-radius:0.7vw;
   }
   .bar_5 {
     position: relative;
-    width: 65%;
-    height: 10px;
+    width: 28vw;
+    height: 1vw;
     background-color:rgb(35, 129, 223);
     text-align: center;
-    line-height: 30px;
+    line-height: 3vw;
     color: white;
-    border-radius: 7px;
+    border-radius:0.7vw;
   }
   .bar_6 {
     position: relative;
-    width: 53%;
-    height: 10px;
+    width: 28vw;
+    height: 1vw;
     background-color:rgb(35, 129, 223);
     text-align: center;
-    line-height: 30px;
+    line-height: 3vw;
     color: white;
-    border-radius: 7px;
+    border-radius:0.7vw;
   }
   .bar_7 {
     position: relative;
-    width: 75%;
-    height: 10px;
+    width: 28vw;
+    height: 1vw;
     background-color:rgb(35, 129, 223);
     text-align: center;
-    line-height: 30px;
+    line-height: 3vw;
     color: white;
-    border-radius: 7px;
+    border-radius:0.7vw;
   }
   .bar_8 {
     position: relative;
-    width: 40%;
-    height: 10px;
+    width: 28vw;
+    height: 1vw;
     background-color:rgb(35, 129, 223);
     text-align: center;
-    line-height: 30px;
+    line-height: 3vw;
     color: white;
-    border-radius: 7px;
+    border-radius:0.7vw;
   }
