--- a/css/education.css
+++ b/css/education.css
@@ -1,20 +1,20 @@
 .text_education{
     text-align: center;
-    box-shadow: 0 4px 0px 0px rgb(194, 193, 193);
+    box-shadow: 0 6px 0px 0px rgb(194, 193, 193);
+    width: 25vw;
+    border-radius: 5vw;
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.8vw;
+    font-size: 1.2vw;
     font-weight: 700;
     
 }
 .specialization{
-
     float: left;
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
 .date{
     float: left;
-
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
@@ -30,7 +30,6 @@
 
 .text-container-education{
     display: flex;
-
     float:left;
     justify-content: space-around;
     flex-direction: row;
@@ -38,9 +37,13 @@
 }
 .title_education{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: 600;
     margin-top:-18vw;
     text-align: center;
     
+}
+.picture_education{
+  width: 6vw;
+  height: 6vw;
 }
