--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -20,7 +20,7 @@ body,html{
     text-align: center;
     width: 100%;
     height: 100%;
-    font-size: 1.8vw;
+    font-size: 1.2vw;
     font-weight: 700;
   
 
@@ -29,20 +29,22 @@ body,html{
 #a_portfolio:hover{
     flex: 1 1 auto;
 }
-.portfolio_click{
+.portfolio_click img{
     -moz-transition: all 1s ease-out;
-    -o-transition: all 2s ease-out;
-    -webkit-transition: all 2s ease-out;
+    -o-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
 }
 .portfolio_click img:hover{
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
 }
+.portfolio_click img{
+ width: 10vw;
+}
 .title_portfolio{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 2.9vw;
- 
+    font-size: 2vw;
     text-align: center;
     font-weight: 600;
     margin-top:10vw;
