--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ html, body {
     margin-left:5%;
     margin-top: 10vw;
     width: 90%;
-    border:1px solid red;
+
    
 }
 .header_text_name{
@@ -48,15 +48,23 @@ html, body {
     font-size:1vw;
     margin-top: 7vh;
     margin-left: 20vh;
-    border:1px solid red;
+
 }
 .logo_header{
     font-size:1vw;
     margin:1vw;
-    border:1px solid red;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
 }
+.logo_header:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
 .nav_header{  
-    border:1px solid red;
+
     flex:1 0 auto;
     text-align: right;
     font-size:2vw;
@@ -68,25 +76,33 @@ html, body {
 }
 a{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.6vw;
+    font-size: 1.2vw;
     font-weight: 500;
     color: ghostwhite;
     text-decoration: none;
     margin:0.2vw;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
     
 }
 a:hover{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.60vw;
+    font-size: 1.2vw;
     font-weight: 700;
     color: rgb(255, 255, 255);
     text-decoration: none;
     border-radius: 0.5vw;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    
+    
 }
 .hire_btn{
     border: black;
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.6vw;
+    font-size: 1.2vw;
     font-weight: 1000;
     text-align: center;
     height:3vw;
@@ -94,17 +110,21 @@ a:hover{
     background-color: white;
     color:rgb(35, 129, 223);
     border-radius:1.2vw;
+    -moz-transition: all 1s ease-out;
+    -o-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
 }
 button:hover{
     border:0px;
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 2vw;
+    font-size: 1.6vw;
     font-weight: 600;
     height:3vw;
     width: 8vw;;
     background-color: rgb(233, 231, 231);
     color:rgb(35, 129, 223);
     border-radius:1.2vw;
+    
     
 }
 button:focus{
@@ -129,15 +149,15 @@ button:focus{
     display: flex;
     flex:1 1 auto;
     max-height: 0vw;
-    border:1px solid red;
+
 }
-.me_img img{
+.me_img{
     display: flex;
     flex-direction: column;
     width: 30vw;
 }
 .me_card{
-    width: 30vw;
+   align-self: stretch;
     box-shadow: 0 0 5px 2px rgb(194, 193, 193);
    
 }
@@ -151,9 +171,8 @@ button:focus{
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
- 
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size:1.6vw;
+    font-size:1.2vw;
     font-weight: 500;
     margin:0 auto;
     margin-top: -2.8vw;
@@ -162,59 +181,82 @@ button:focus{
     line-height: 2vw;
     text-align: center;
 }
-.li_me_title{
-    font-size:1.8vw;
-    text-align: left;
-    margin-top:2vw auto;
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-    border:1px solid red;
-    content: none; 
-   
- 
-    
-}
-.li_me_skills{
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size:1.7vw;
-     text-align: left;
-    list-style-type: none;
-    border:1px solid red;
-    
-}
-ul li:before{
-    color: rgb(35, 129, 223);
-    content: "•"; 
+.li_skills {
     display: flex;
-    flex-direction:column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  width: 25vw;
+  height: 0 auto;
+  align-self: flex-start;
+    margin: 0 auto;
+    -webkit-box-align: flex-start;
+        -ms-flex-align: flex-start;
+            align-items:flex-start;
+}
+
+.li_skills ul{
+
+    display: flex;
+     flex-direction: column;
+      -ms-flex: 0 1 1;
+      flex: 0 1 1;
+      background: rgba(255,255,255,0.5);
+      padding: 2vw 4.5vw;
+      list-style: none;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+              
   
 }
-ul{
-   
 
-
-   border:1px solid red;
-   
-
-    
+.li_skills ul li {
+    font-family: 'PT Sans Narrow', sans-serif;
+      font-size: 1.6vw;
+      font-weight: 700;
+      list-style-type: none;
+      color: #000000;
+    -ms-flex-preferred-size: 4.5vw;
+        flex-basis: 4.5vw;
+      position: relative;
 }
-
-
+.li_skills ul .skill::before { 
+    font-family: 'PT Sans Narrow', sans-serif;
+      content: "*";
+      font-size: 4vw;
+      height: 6vw;
+      position: absolute;
+      left: -4vw;
+      bottom: 0vw;
+      top: -1vw;
+      color: #3995ff;
+}  
+.li_skills ul .skill {
+    font-family: 'PT Sans Narrow', sans-serif;
+      font-size: 1vw;
+      font-weight: 500;
+      color: #000000;
+      margin-bottom: -2vw;
+      left: 4vw;
+    -ms-flex-preferred-size: 4.5vw;
+        flex-basis: 4.5vw;
+      position: relative;
+}
 .container-portfolio{
     position: relative;
 }
 #toTop {
     position:fixed;
     z-index:9999;
-    bottom:10px;
-    right:10px;
-    background: url('../img/up.png') no-repeat;
-    width:50px;
-    height: 50px;
-    border: none;
-    padding: 12px;
+    bottom:1vw;
+    right:1vw;
+    background: url('../img/up.png')  no-repeat;
+    background-size: contain;
+    background-position: center;
     cursor: pointer;
+    object-fit: scale-down;
+    width: 5vw;
+    height: 5vw;
     color: transparent;
     text-decoration: none;
    }
