--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,15 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content:space-around;
-    height: 800px;
+    height: 80vw;
     align-items: flex-start;
     margin:0 auto;
     margin-left:5%;
     margin-top: 10vw;
     width: 90%;
-    border:1px solid red;
+    box-shadow: 0 4px 4px 0px rgb(194, 193, 193);
+
+
    
 }
 .header_text_name{
@@ -48,15 +50,23 @@ html, body {
     font-size:1vw;
     margin-top: 7vh;
     margin-left: 20vh;
-    border:1px solid red;
+
 }
 .logo_header{
     font-size:1vw;
     margin:1vw;
-    border:1px solid red;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
 }
+.logo_header:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
 .nav_header{  
-    border:1px solid red;
+
     flex:1 0 auto;
     text-align: right;
     font-size:2vw;
@@ -68,43 +78,55 @@ html, body {
 }
 a{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.6vw;
+    font-size: 1.2vw;
     font-weight: 500;
     color: ghostwhite;
     text-decoration: none;
     margin:0.2vw;
+    -moz-transition: all 0.2s ease-out;
+    -o-transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
     
 }
 a:hover{
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.60vw;
+    font-size: 1.2vw;
     font-weight: 700;
     color: rgb(255, 255, 255);
     text-decoration: none;
     border-radius: 0.5vw;
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    
+    
 }
 .hire_btn{
     border: black;
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 1.6vw;
+    font-size: 1.2vw;
     font-weight: 1000;
     text-align: center;
     height:3vw;
-    width: 10vw;;
+    width: 12vw;;
     background-color: white;
     color:rgb(35, 129, 223);
     border-radius:1.2vw;
+    -moz-transition: all 1s ease-out;
+    -o-transition: all 1s ease-out;
+    -webkit-transition: all 1s ease-out;
 }
 button:hover{
     border:0px;
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size: 2vw;
+    font-size: 1.6vw;
     font-weight: 600;
     height:3vw;
     width: 8vw;;
     background-color: rgb(233, 231, 231);
     color:rgb(35, 129, 223);
     border-radius:1.2vw;
+    
     
 }
 button:focus{
@@ -129,16 +151,17 @@ button:focus{
     display: flex;
     flex:1 1 auto;
     max-height: 0vw;
-    border:1px solid red;
+
 }
 .me_img img{
     display: flex;
     flex-direction: column;
     width: 30vw;
+    
 }
 .me_card{
-    width: 30vw;
-    box-shadow: 0 0 5px 2px rgb(194, 193, 193);
+    height: 40vw;
+
    
 }
 
@@ -148,73 +171,44 @@ button:focus{
     font-weight: 800;
 }
 .me_info{
+    
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
- 
     font-family: 'PT Sans Narrow', sans-serif;
-    font-size:1.6vw;
+    font-size:1.2vw;
     font-weight: 500;
     margin:0 auto;
     margin-top: -2.8vw;
     margin-left: 2vw;
     white-space: normal;
     line-height: 2vw;
-    text-align: center;
+    text-align: match-parent;
 }
-.li_me_title{
-    font-size:1.8vw;
-    text-align: left;
-    margin-top:2vw auto;
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-weight: 700;
-    color: rgb(0, 0, 0);
-    border:1px solid red;
-    content: none; 
-   
- 
-    
-}
-.li_me_skills{
-    font-family: 'PT Sans Narrow', sans-serif;
-    font-size:1.7vw;
-     text-align: left;
-    list-style-type: none;
-    border:1px solid red;
-    
-}
-ul li:before{
-    color: rgb(35, 129, 223);
-    content: "•"; 
+.li_skills img {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
+    width: 30vw;
+   
   
 }
-ul{
-   
-
-
-   border:1px solid red;
-   
-
-    
-}
-
 
 .container-portfolio{
     position: relative;
+  
 }
 #toTop {
     position:fixed;
     z-index:9999;
-    bottom:10px;
-    right:10px;
-    background: url('../img/up.png') no-repeat;
-    width:50px;
-    height: 50px;
-    border: none;
-    padding: 12px;
+    bottom:1vw;
+    right:1vw;
+    background: url('../img/up.png')  no-repeat;
+    background-size: contain;
+    background-position: center;
     cursor: pointer;
+    object-fit: scale-down;
+    width: 5vw;
+    height: 5vw;
     color: transparent;
     text-decoration: none;
    }
