--- a/css/education.css
+++ b/css/education.css
@@ -47,3 +47,27 @@
   width: 6vw;
   height: 6vw;
 }
+@media (max-width: 768px){
+    .title_education{
+        font-family: 'PT Sans Narrow', sans-serif;
+        font-size: 3vw;
+        font-weight: 600;
+        margin-top:-18vw;
+        text-align: center;
+        
+    }
+    .picture_education{
+      width: 7vw;
+      height: 7vw;
+    }
+    .text_education{
+        text-align: center;
+        box-shadow: 0 6px 0px 0px rgb(194, 193, 193);
+        width: 30vw;
+        border-radius: 5vw;
+        font-family: 'PT Sans Narrow', sans-serif;
+        font-size: 1.6vw;
+        font-weight: 700;
+        
+}
+}
