--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -50,3 +50,27 @@ body,html{
     margin-top:10vw;
     width: 100%;
 }
+@media (max-width: 768px){
+
+    .title_portfolio{
+        font-family: 'PT Sans Narrow', sans-serif;
+        font-size: 3.1vw;
+        text-align: center;
+        font-weight: 600;
+        margin-top:10vw;
+        width: 100%;
+    }
+    .portfolio_card{
+    
+        flex: 1 1 auto;
+        font-family: 'PT Sans Narrow', sans-serif;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        font-size: 1.6vw;
+        font-weight: 700;
+      
+    
+    }
+    
+}
